update main page

--- a/Main.html
+++ b/Main.html
@@ -3,12 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Chess!</title>
 
-    <link rel="Style" href ="Style.css">
+    <link rel="stylesheet" href ="Style.css">
     <script src="Script.js"></script>
 </head>
 <body>
-    
+    <h1>Welcome to Chess!</h1>
+    <h2>Here we have a couple of chess variants you can play!</h2>
+
+    <div class = "choices"> 
+        <p class = "choice">Minesweeper!</p>
+        <p class = "choice">Randomized!</p>
+        <p class = "choice">Markov!</p>
+        
+    </div> 
+    <div class = "choices" id = "randombox"> 
+        <p class = "choice" id = "random">Random?</p>
+    </div> 
 </body>
 </html>
