--- a/Main.html
+++ b/Main.html
@@ -11,6 +11,11 @@
 <body>
     <h1>Welcome to Chess!</h1>
     <h2>Here we have a couple of chess variants you can play!</h2>
+    <div id="img1">
+        <img src = "https://media.tenor.com/84kT6EIUo_gAAAAm/nerd.webp" id = "img">
+    </div>
+
+    <br> <br/><br> <br/><br> <br/><br> <br/><br> <br/>
 
     <div class = "choices"> 
         <p class = "choice">Minesweeper!</p>
