organized, added chess page

--- a/Main/Main.html
+++ b/Main/Main.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chess!</title>
 
-    <link rel="stylesheet" href ="Style.css">
-    <script src="Script.js"></script>
+    <link rel="stylesheet" href ="Main.css">
+    <script src="Main.js"></script>
 </head>
 <body>
     <h1>Welcome to Chess!</h1>
