--- a/Chess/Chess.html
+++ b/Chess/Chess.html
@@ -12,84 +12,84 @@
 <body>
     <table id = "board">
         <tr id = "8">
-            <th class = "b" id = "8a"></th>
-            <th class = "a" id = "8b"></th>
-            <th class = "b" id = "8c"></th>
-            <th class = "a" id = "8d"></th>
-            <th class = "b" id = "8e"></th>
-            <th class = "a" id = "8f"></th>
-            <th class = "b" id = "8g"></th>
-            <th class = "a" id = "8h"></th>
+            <td class = "b" id = "8a">♜</td>
+            <td class = "a" id = "8b">♞</td>
+            <td class = "b" id = "8c">♝</td>
+            <td class = "a" id = "8d">♛</td>
+            <td class = "b" id = "8e">♚</td>
+            <td class = "a" id = "8f">♝</td>
+            <td class = "b" id = "8g">♞</td>
+            <td class = "a" id = "8h">♜</td>
         </tr>
         <tr id = "7">
-            <th class = "a" id = "7a"></th>
-            <th class = "b" id = "7b"></th>
-            <th class = "a" id = "7c"></th>
-            <th class = "b" id = "7d"></th>
-            <th class = "a" id = "7e"></th>
-            <th class = "b" id = "7f"></th>
-            <th class = "a" id = "7g"></th>
-            <th class = "b" id = "7h"></th>
+            <td class = "a" id = "7a">♟</td>
+            <td class = "b" id = "7b">♟</td>
+            <td class = "a" id = "7c">♟</td>
+            <td class = "b" id = "7d">♟</td>
+            <td class = "a" id = "7e">♟</td>
+            <td class = "b" id = "7f">♟</td>
+            <td class = "a" id = "7g">♟</td>
+            <td class = "b" id = "7h">♟</td>
         </tr>
         <tr id = "6">
-            <th class = "b" id = "6a"></th>
-            <th class = "a" id = "6b"></th>
-            <th class = "b" id = "6c"></th>
-            <th class = "a" id = "6d"></th>
-            <th class = "b" id = "6e"></th>
-            <th class = "a" id = "6f"></th>
-            <th class = "b" id = "6g"></th>
-            <th class = "a" id = "6h"></th>
+            <td class = "b" id = "6a"></td>
+            <td class = "a" id = "6b"></td>
+            <td class = "b" id = "6c"></td>
+            <td class = "a" id = "6d"></td>
+            <td class = "b" id = "6e"></td>
+            <td class = "a" id = "6f"></td>
+            <td class = "b" id = "6g"></td>
+            <td class = "a" id = "6h"></td>
         </tr>
         <tr id = "5">
-            <th class = "a" id = "5a"></th>
-            <th class = "b" id = "5b"></th>
-            <th class = "a" id = "5c"></th>
-            <th class = "b" id = "5d"></th>
-            <th class = "a" id = "5e"></th>
-            <th class = "b" id = "5f"></th>
-            <th class = "a" id = "5g"></th>
-            <th class = "b" id = "5h"></th>
+            <td class = "a" id = "5a"></td>
+            <td class = "b" id = "5b"></td>
+            <td class = "a" id = "5c"></td>
+            <td class = "b" id = "5d"></td>
+            <td class = "a" id = "5e"></td>
+            <td class = "b" id = "5f"></td>
+            <td class = "a" id = "5g"></td>
+            <td class = "b" id = "5h"></td>
         </tr>
         <tr id = "4">
-            <th class = "b" id = "4a"></th>
-            <th class = "a" id = "4b"></th>
-            <th class = "b" id = "4c"></th>
-            <th class = "a" id = "4d"></th>
-            <th class = "b" id = "4e"></th>
-            <th class = "a" id = "4f"></th>
-            <th class = "b" id = "4g"></th>
-            <th class = "a" id = "4h"></th>
+            <td class = "b" id = "4a"></td>
+            <td class = "a" id = "4b"></td>
+            <td class = "b" id = "4c"></td>
+            <td class = "a" id = "4d"></td>
+            <td class = "b" id = "4e"></td>
+            <td class = "a" id = "4f"></td>
+            <td class = "b" id = "4g"></td>
+            <td class = "a" id = "4h"></td>
         </tr>
         <tr id = "3">
-            <th class = "a" id = "3a"></th>
-            <th class = "b" id = "3b"></th>
-            <th class = "a" id = "3c"></th>
-            <th class = "b" id = "3d"></th>
-            <th class = "a" id = "3e"></th>
-            <th class = "b" id = "3f"></th>
-            <th class = "a" id = "3g"></th>
-            <th class = "b" id = "3h"></th>
+            <td class = "a" id = "3a"></td>
+            <td class = "b" id = "3b"></td>
+            <td class = "a" id = "3c"></td>
+            <td class = "b" id = "3d"></td>
+            <td class = "a" id = "3e"></td>
+            <td class = "b" id = "3f"></td>
+            <td class = "a" id = "3g"></td>
+            <td class = "b" id = "3h"></td>
         </tr>
         <tr id = "2">
-            <th class = "b" id = "2a"></th>
-            <th class = "a" id = "2b"></th>
-            <th class = "b" id = "2c"></th>
-            <th class = "a" id = "2d"></th>
-            <th class = "b" id = "2e"></th>
-            <th class = "a" id = "2f"></th>
-            <th class = "b" id = "2g"></th>
-            <th class = "a" id = "2h"></th>
+            <td class = "b" id = "2a">♙</td>
+            <td class = "a" id = "2b">♙</td>
+            <td class = "b" id = "2c">♙</td>
+            <td class = "a" id = "2d">♙</td>
+            <td class = "b" id = "2e">♙</td>
+            <td class = "a" id = "2f">♙</td>
+            <td class = "b" id = "2g">♙</td>
+            <td class = "a" id = "2h">♙</td>
         </tr>
         <tr id = "1">
-            <th class = "a" id = "1a"></th>
-            <th class = "b" id = "1b"></th>
-            <th class = "a"id = "1c"></th>
-            <th class = "b"id = "1d"></th>
-            <th class = "a"id = "1e"></th>
-            <th class = "b"id = "1f"></th>
-            <th class = "a"id = "1g"></th>
-            <th class = "b"id = "1h"></th>
+            <td class = "a" id = "1a">♖</td>
+            <td class = "b" id = "1b">♘</td>
+            <td class = "a" id = "1c">♗</td>
+            <td class = "b" id = "1d">♕</td>
+            <td class = "a" id = "1e">♔</td>
+            <td class = "b" id = "1f">♗</td>
+            <td class = "a" id = "1g">♘</td>
+            <td class = "b" id = "1h">♖</td>
         </tr>
     </table>
 </body>
