Restructured Project Files

--- a/chess.html
+++ b/chess.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chess!</title>
 
-    <link rel="stylesheet" href ="Chess.css">
-    <script src="Chess.js"></script>
+    <link rel="stylesheet" href ="css/chess.css">
+    <script src="js/chess.js"></script>
 </head>
 
 <body>
