--- a/home.html
+++ b/home.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chess!</title>
 
-    <link rel="stylesheet" href ="Main.css">
-    <script src="Main.js"></script>
+    <link rel="stylesheet" href ="css/home.css">
+    <script src="js/home.js"></script>
 </head>
 <body>
     <h1>Welcome to Chess!</h1>
