--- a/home.html
+++ b/home.html
@@ -3,21 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chess!</title>
+    <title>Minesweeper Chess</title>
 
     <link rel="stylesheet" href ="css/home.css">
     <script src="js/home.js"></script>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bowlby+One+SC&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Welcome to Chess!</h1>
-    <h2>Here we have a couple of chess variants you can play!</h2>
+    <h1>Minesweeper Chess</h1>
+    <h2>Classic chess, but with mines hidden on the board.</h2>
     <div id="img1">
         <img src = "https://media.tenor.com/84kT6EIUo_gAAAAm/nerd.webp" id = "img">
     </div>
 
     <br> <br/><br> <br/><br> <br/><br> <br/><br> <br/>
 
-    <div class = "choices"> 
+    <!-- Let's Save These Options For Later; Stick with One Variant of Chess For Now -->
+    <!-- <div class = "choices"> 
         <p class = "choice">Minesweeper!</p>
         <p class = "choice">Randomized!</p>
         <p class = "choice">Markov!</p>
@@ -25,6 +30,11 @@
     </div> 
     <div class = "choices" id = "randombox"> 
         <p class = "choice" id = "random">Random?</p>
-    </div> 
+    </div>  -->
+
+    <div class = "choices" id = "randombox"> <!-- TODO: Simplify these div options, unnecessary splitting-->
+        <p class = "choice" id ="random">Start Game</p>
+    </div>
+
 </body>
 </html>
