Started Implementing Turn Messages

--- a/chess.html
+++ b/chess.html
@@ -6,10 +6,11 @@
     <title>Chess!</title>
 
     <link rel="stylesheet" href ="css/chess.css">
-    <script src="js/chess.js"></script>
+    <script src="js/chess.js" defer></script>
 </head>
 
 <body>
+
     <table id = "board">
         <tr id = "8">
             <td class = "b" id = "8a">♜</td>
@@ -92,5 +93,8 @@
             <td class = "b" id = "1h">♖</td>
         </tr>
     </table>
+
+    <div id="turnMessages"></div>
+
 </body>
 </html>
