--- a/home.html
+++ b/home.html
@@ -13,15 +13,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Bowlby+One+SC&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+
     <div id="title">
         <h1>Minesweeper Chess</h1>
-        <h2>Classic chess, but with mines hidden on the board.</h2>
+        <h2>Classic chess, but with mines hidden on the board!</h2>
         <img src = "https://media.tenor.com/84kT6EIUo_gAAAAm/nerd.webp">
     </div>
     
     <div class="choices">
-        <button id="startGameBtn">Start Game</button>
+        <a href="chess.html"><button id="startGameBtn">Start Game</button></a>
     </div>
 
 </body>
