Mines numbers now

--- a/chess.html
+++ b/chess.html
@@ -93,9 +93,92 @@
             <td class = "b" id = "1h">♖</td>
         </tr>
     </table>
+    <table id = "mineboard">
+        <tr id = "8">
+            <td class = "c" id = "81"></td>
+            <td class = "c" id = "82"></td>
+            <td class = "c" id = "83"></td>
+            <td class = "c" id = "84"></td>
+            <td class = "c" id = "85"></td>
+            <td class = "c" id = "86"></td>
+            <td class = "c" id = "87"></td>
+            <td class = "c" id = "88"></td>
+        </tr>
+        <tr id = "7">
+            <td class = "c" id = "71"></td>
+            <td class = "c" id = "72"></td>
+            <td class = "c" id = "73"></td>
+            <td class = "c" id = "74"></td>
+            <td class = "c" id = "75"></td>
+            <td class = "c" id = "76"></td>
+            <td class = "c" id = "77"></td>
+            <td class = "c" id = "78"></td>
+        </tr>
+        <tr id = "6">
+            <td class = "c" id = "61"></td>
+            <td class = "c" id = "62"></td>
+            <td class = "c" id = "63"></td>
+            <td class = "c" id = "64"></td>
+            <td class = "c" id = "65"></td>
+            <td class = "c" id = "66"></td>
+            <td class = "c" id = "67"></td>
+            <td class = "c" id = "68"></td>
+        </tr>
+        <tr id = "5">
+            <td class = "c" id = "51"></td>
+            <td class = "c" id = "52"></td>
+            <td class = "c" id = "53"></td>
+            <td class = "c" id = "54"></td>
+            <td class = "c" id = "55"></td>
+            <td class = "c" id = "56"></td>
+            <td class = "c" id = "57"></td>
+            <td class = "c" id = "58"></td>
+        </tr>
+        <tr id = "4">
+            <td class = "c" id = "41"></td>
+            <td class = "c" id = "42"></td>
+            <td class = "c" id = "43"></td>
+            <td class = "c" id = "44"></td>
+            <td class = "c" id = "45"></td>
+            <td class = "c" id = "46"></td>
+            <td class = "c" id = "47"></td>
+            <td class = "c" id = "48"></td>
+        </tr>
+        <tr id = "3">
+            <td class = "c" id = "31"></td>
+            <td class = "c" id = "32"></td>
+            <td class = "c" id = "33"></td>
+            <td class = "c" id = "34"></td>
+            <td class = "c" id = "35"></td>
+            <td class = "c" id = "36"></td>
+            <td class = "c" id = "37"></td>
+            <td class = "c" id = "38"></td>
+        </tr>
+        <tr id = "2">
+            <td class = "c" id = "21"></td>
+            <td class = "c" id = "22"></td>
+            <td class = "c" id = "23"></td>
+            <td class = "c" id = "24"></td>
+            <td class = "c" id = "25"></td>
+            <td class = "c" id = "26"></td>
+            <td class = "c" id = "27"></td>
+            <td class = "c" id = "28"></td>
+        </tr>
+        <tr id = "1">
+            <td class = "c" id = "11"></td>
+            <td class = "c" id = "12"></td>
+            <td class = "c" id = "13"></td>
+            <td class = "c" id = "14"></td>
+            <td class = "c" id = "15"></td>
+            <td class = "c" id = "16"></td>
+            <td class = "c" id = "17"></td>
+            <td class = "c" id = "18"></td>
+        </tr>
+    </table>
 
     <div id="turnMessages"></div>
     <button id="flip">Flip is On </button>
+    <button id="viewMines">View Mines</button>
 
 </body>
 </html>
