Fixed Chess/Mine Board Positioning

--- a/chess.html
+++ b/chess.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-
-    <table id = "board">
+    <div id="boardSpace">
+        <table id = "board">
         <tr id = "8">
             <td class = "b" id = "8a">♜</td>
             <td class = "a" id = "8b">♞</td>
@@ -175,7 +175,8 @@
             <td class = "c" id = "18"></td>
         </tr>
     </table>
-
+    </div>
+    
     <div id="turnMessages"></div>
     <button id="flip">Flip is On </button>
     <button id="viewMines">View Mines</button>
