Minesweeper View As Overlay

--- a/chess.html
+++ b/chess.html
@@ -178,8 +178,12 @@
     </div>
     
     <div id="turnMessages"></div>
-    <button id="flip">Flip is On </button>
-    <button id="viewMines">View Mines</button>
+
+    <div id="quickSettingBtns">
+        <button id="flip">Flip is On </button>
+        <button id="viewMines">View Mines</button>
+    </div>
+    
 
 </body>
 </html>
