Started building settings menu

--- a/index.html
+++ b/index.html
@@ -26,7 +26,22 @@
     </div>
     <div class="choices">
         <a href="chess.html"><button id="startGameBtn">Start Game</button></a>
+        <button id="settingsBtn">Change Settings</button>
+    </div>
+
+    <div id="settingsWindow">
+        <h1>Change Settings</h1>
+
+        <form> 
+            <h2>Whatever This Slider Is</h2>
+            <input type = "range" min ="0" max = "100" value ="35" id="slide" > 
+
+            <h2>Enable Flipping Towards Active Player?</h2>
+
+        </form>
+
         
+
     </div>
     
 </body>
