--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minesweeper Chess</title>
 
-    <link rel="stylesheet" href ="css/home.css">
-    <script src="js/home.js"></script>
+    <link rel="stylesheet" href ="css/index.css">
+    <script src="js/index.js"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
