--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Minesweeper Chess</title>
 
     <link rel="stylesheet" href ="css/index.css">
-    <script src="js/index.js"></script>
+    <script src="js/index.js" defer></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,8 +18,12 @@
         <h1>Minesweeper Chess</h1>
         <h2>Classic chess, but with mines hidden on the board!</h2>
         <img src = "https://media.tenor.com/84kT6EIUo_gAAAAm/nerd.webp">
+        
     </div>
-    <input type = "range" min ="0" max = "100" value ="35" id="slide" > 
+    <div id = "sliderbox">
+        <p> Difficulty:  </p>
+        <input type = "range" min ="0" max = "100" value ="35" id="slide" > 
+    </div>
     <div class="choices">
         <a href="chess.html"><button id="startGameBtn">Start Game</button></a>
         
